--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 body {
     padding: 0;
     margin: 0;
-    background-image: url('app/images/fondoperro.jpg');
+    background-image: url('app/images/fondoperro.gif');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
